# systemF_in_Cpp

./: CMakeLists.txt  README.md
include/systemF/: expr.h  show.h  type.h  typecheck.h  util.h
src/: expr.cpp  show.cpp  type.cpp  typecheck.cpp  util.cpp
test/: CMakeLists.txt  catch2Setup.cmake  first.cpp
